# ParallelisingConwaysGameOfLife

code/: CMakeLists.txt
code/conway_lib/: conway.cpp  conway.h  game_grid.cpp  game_grid.h  io.cpp  io.h  strategies.cpp  strategies.h  utilities.cpp  utilities.h
testing/library_tests/: CMakeLists.txt  conway_class_tests.cpp  game_class_tests.cpp  game_grid_class_tests.cpp  io_tests.cpp  utilities_tests.cpp
testing/library_tests/resources/: correct_file_structure_2.txt  simple_oscillator.txt  wrong_file_structure_1.txt  wrong_file_structure_2.txt  wrong_file_structure_3.txt  wrong_file_structure_4.txt  wrong_file_structure_5.txt  wrong_file_structure_6.txt  wrong_file_structure_7.txt
